# easymultiprocess

./: README.md  pyproject.toml  requirements.txt
easy_multiprocess/: __init__.py  easy_multiprocess.py
tests/: _test_contextrecreation.py  test.py
tests/integration/: _test_boolean_no_delay.py  _test_decorator.py  _test_futureresult_args.py  _test_integration_prints_easy_multiprocess.py  _test_integration_prints_std_lib.py  _test_integration_shutdown.py  _test_integration_tasks_end.py  _test_realcpuwork.py
